<resources>
    <string name="app_name">Decider</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="login_via_social_network">Login via social network:</string>
    <string name="or">or</string>
    <string name="vk">VK</string>
    <string name="open_context_menu">Open context menu</string>
    <string name="ellipsize_hint">Press to show full question</string>
    <string name="post_like">Like</string>
    <string name="post_comments">Comments</string>
    <string name="pref_main">Main</string>
    <string name="pref_main_key" translatable="false">pref_main_key</string>
    <string name="report_spam">Mark as spam</string>
    <string name="loading">Loading...</string>
    <string name="pref_shorten_long_posts_key" translatable="false">pref_shorten_long_posts_key</string>
    <string name="pref_text_size_key" translatable="false">pref_text_size_key</string>
    <string name="pref_shorten_long_posts_title">Shorten long posts</string>
    <string name="pref_shorten_long_posts_summ">Press to show full question</string>
    <string name="pref_text_size_title">Font size</string>
    <string name="drawer_open">Open categories list</string>
    <string name="drawer_close">Close categories list</string>
    <string name="categories_label">Categories</string>
    <string name="auth_title">Decider: authorization</string>
    <string name="avatar">avatar</string>
    <string name="send_post">Send post</string>
    <string name="post_text_label">Question:</string>
    <string name="post_text_placeholder">To be or not to be...</string>
    <string name="post_category_label">Category:</string>
    <string name="text_type">Text</string>
    <string name="images_type">Images</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="option1">First option:</string>
    <string name="option2">Second option:</string>
    <string name="anonymously">Anonymous</string>
    <string name="popular_tab">Popular</string>
    <string name="new_tab">New</string>
    <string name="my_tab">My</string>
    <string name="share">share</string>
    <string name="create_post">Create </string>
    <string name="add_post_toolbar_title">New question</string>
    <string name="fill_all_fields">Please, fill all the fields</string>
    <string name="comments_toolbar_title">Decider</string>
    <string name="poll_item1">Vote 1</string>
    <string name="poll_item2">Vote 2</string>
    <string name="poll_item_image" translatable="false">poll_item_image</string>
    <string name="poll_item_selection_mark">Marked as selected</string>
    <string name="add_post_image_choice1">Left image</string>
    <string name="add_post_image_choice2">Right image</string>
    <string name="add_post_choices_label">Choices:</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="send_comment">Send comment</string>
    <string name="comment_placeholder">Comment…</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="full_name_placeholder">Vasja Pupkin</string>
    <string name="county_label">Country:</string>
    <string name="country_placeholder">Russia</string>
    <string name="city_label">City:</string>
    <string name="city_placeholder">Moscow</string>
    <string name="birthday_placeholder">12.12.92</string>
    <string name="birthday_label">Birthday:</string>
    <string name="profile_image__desc">Avatar</string>
    <string name="about_label">About:</string>
    <string name="about_placeholder">My name is Vasja and i\'m am Pupkin from Russia</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="name">Name</string>
    <string name="surname_hint">Surname...</string>
    <string name="nick_hint">Nickname...</string>
    <string name="birthday_icon">Birthday icon</string>
    <string name="location_icon">Location icon</string>
    <string name="city_hint">City...</string>
    <string name="country_hint">Country...</string>
    <string name="about_hint">I am...</string>
    <string name="about_icon">About icon</string>
    <string name="date_hint">Birthday...</string>
    <string name="profile_edit_toolbar_title">Edit profile</string>
    <string name="save_profile">Save</string>
    <string name="save_profile_hint">Save profile</string>
    <string name="edit_profile_hint">Edit profile</string>
    <string name="pictures_fil">Both pictures must be filled</string>
    <string name="creating_post">Creating a question</string>
    <string name="please_wait">Please wait...</string>
    <string name="name_hint">Name...</string>
    <string name="divider">Divider</string>
    <string name="saving_profile">Saving profile</string>
    <string name="loading_profile">Loading profile</string>
    <string name="server_problem">Server is experiencing some problems right now. Try again later.</string>
    <string name="gender_label">Gender:</string>
    <string name="gender_placeholder">male</string>
    <string name="gender_icon">Gender icon</string>
    <string name="gender_hint">Male/female</string>
    <string name="gender_none"> </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="no_questions">No questions here yet</string>
    <string name="error_no_accounts">Error: No accounts to show in drawer.</string>
    <string name="no_nick">user</string>
    <string name="preview_toolbar_title">Preview</string>
    <string name="exit_question_creation">Do you really want to exit?\nThis question won\'t be saved.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="more_comments">More comments</string>
    <string name="gcm_sender_id" translatable="false">620471085989</string>
    <string name="empty_credentials">Please fill login and password fields</string>
    <string name="editing_profile">Profile editing</string>
    <string name="exit_profile_editing">Do you really want to exit?\nData won\'t be saved.</string>
    <string name="shared_by">Shared by Decider app</string>
    <string name="profile_saved">Profile saved</string>
    <string name="end_registration_alert">Registration completion</string>
    <string name="end_registration_alert_message">To complete registration, please enter your nickname.</string>
    <string name="send">Send</string>
    <string name="anon_badge">(Anonymous)</string>
    <string name="anon_explanation">Other users do not see the author.</string>
    <string name="invalid_email">Please enter real email address</string>
    <string name="push_new_comment">New comment on your question!</string>
    <string name="push_new_vote">New vote on your question!</string>
    <string name="push_more_comments">More comments (%d) on your question!</string>
    <string name="push_more_votes">More votes (%d) on your question!</string>
    <string name="question_marked_spam">Question marked as spam</string>
    <string name="comment_marked_spam">Comment marked as spam</string>
    <string name="question_created">Question is created!</string>
    <string name="username_taken">Username \'%s\' is already taken</string>
    <string name="no_internet">There are problems with Internet connection</string>
    <string name="internal_problems">Internal problems. Try again later.</string>
    <string name="already_voted">You have already voted in this question</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="email_taken">This email is already taken</string>
    <string name="username_required">Username is required to finish registration</string>
    <string name="loading_image">Loading image...</string>
    <string name="loading_image_failed">Failed to load image.\nUnstable internet connection or lack of RAM.</string>
    <string name="ok">OK</string>
    <string name="anon_profile">Anonymous profile</string>
    <string name="anon_profile_entry">The author of this post has preferred to remain incognito.</string>
    <string name="preferences">Preferences</string>
    <string name="pref_ui_key" translatable="false">pref_ui_key</string>
    <string name="pref_ui">Interface</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_key" translatable="false">pref_notifications_key</string>
    <string name="pref_notification_comments_key" translatable="false">pref_notification_comments_key</string>
    <string name="pref_notification_votes_key" translatable="false">pref_notification_votes_key</string>
    <string name="pref_notification_comments_title">Notify about comments</string>
    <string name="pref_notification_votes_title">Notify about votes</string>
    <string name="error_empty_comment">Unable to send empty comment</string>

</resources>
