<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        style="@style/HeaderBar"
        app:title="@string/profile_edit_toolbar_title"
        android:theme="@style/ActionBarThemeOverlay"
        app:popupTheme="@style/ActionBarPopupThemeOverlay">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/primary_text_default_material_dark"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/save_profile"
            android:drawableEnd="@drawable/ic_ab_done"
            android:drawableRight="@drawable/ic_ab_done"
            android:drawablePadding="8dp"
            android:contentDescription="@string/save_profile_hint" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="true">

                <FrameLayout
                    android:id="@+id/image_frame"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:cardUseCompatPadding="true"
                        card_view:cardElevation="6dp"
                        card_view:cardCornerRadius="3dp">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/profile"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/profile_image__desc" />

                    </android.support.v7.widget.CardView>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nick_hint"
                        />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        />

                    <EditText
                        android:id="@+id/surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname_hint"
                        />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:background="@android:drawable/divider_horizontal_textfield" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2" >

                <ImageView
                    android:id="@+id/gender_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gender_icon"
                    android:contentDescription="@string/gender_icon" />

                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender_hint"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/divider"
                    android:background="@android:drawable/divider_horizontal_textfield" />


                <ImageView
                    android:id="@+id/date_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_today"
                    android:contentDescription="@string/birthday_icon" />

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:hint="@string/date_hint"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/divider"
                    android:background="@android:drawable/divider_horizontal_textfield" />

                <ImageView
                    android:id="@+id/country_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_myplaces"
                    android:contentDescription="@string/location_icon" />

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country_hint"
                    android:inputType="textCapSentences" />

                <EditText
                    android:id="@+id/city"
                    android:layout_column="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_hint"
                    android:inputType="textCapSentences" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/divider"
                    android:background="@android:drawable/divider_horizontal_textfield" />


                <ImageView
                    android:id="@+id/about_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_edit"
                    android:contentDescription="@string/about_icon" />

                <EditText
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="6"
                    android:gravity="top"
                    android:hint="@string/about_hint"/>

            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>