<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/post_add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        style="@style/HeaderBar"
        app:title="@string/add_post_toolbar_title"
        android:theme="@style/ActionBarThemeOverlay"
        app:popupTheme="@style/ActionBarPopupThemeOverlay">

        <Button
            android:id="@+id/add_post_send_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/primary_text_default_material_dark"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/create_post"
            android:drawableEnd="@drawable/ic_ab_done"
            android:drawableRight="@drawable/ic_ab_done"
            android:drawablePadding="8dp"
            android:contentDescription="@string/send_post" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/post_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_text_label"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <EditText
                android:id="@+id/add_post_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_text_label"
                android:singleLine="false"
                android:lines="5"
                android:gravity="top"
                android:hint="@string/post_text_placeholder"/>

            <TextView
                android:id="@+id/add_post_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_post_text"
                android:text="@string/post_category_label"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <Spinner
                android:id="@+id/add_post_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_post_category_label"/>

            <TextView
                android:id="@+id/add_post_answers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_post_category_spinner"
                android:layout_marginTop="10dp"
                android:text="@string/add_post_choices_label"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <LinearLayout
                android:id="@+id/choices_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_post_answers_label"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_post_image_choice1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawingCacheQuality="low"
                    android:scaleType="centerInside"
                    android:src="@drawable/photo_placeholder"
                    android:contentDescription="@string/add_post_image_choice1" />

                <ImageView
                    android:id="@+id/add_post_image_choice2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawingCacheQuality="low"
                    android:scaleType="centerInside"
                    android:src="@drawable/photo_placeholder"
                    android:contentDescription="@string/add_post_image_choice2" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/add_post_anonymity_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/choices_layout"
                android:layout_alignParentBottom="true"
                android:checked="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/anonymously"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>